feat add category delete and fixed other
