# internal/api/category/category.go
@@ -1,6 +1,7 @@
 package category
 
 import (
+	"fmt"
 	"ilanver/internal/helpers"
 	"ilanver/internal/models"
 	"ilanver/repository"
@@ -20,20 +21,19 @@ func Insert(c echo.Context) error {
 	if helpers.Validator(&c, &req) != nil {
 		return nil
 	}
+
+	category := models.Category{}
 	// main category kontrolü
-	if req.MainCategory != 0 {
-		_, err := repository.Get().Category().Exists(req.MainCategory)
-		if err != nil {
+	if req.MainCategory > 0 {
+		_, err, rowCount := repository.Get().Category().Exists(req.MainCategory)
+		if err != nil || rowCount == 0 {
 			return c.JSON(http.StatusBadRequest, helpers.Response(nil, "Main kategory bulunamadı"))
 		}
+		category.MainCategory = req.MainCategory
 	}
 
 	// new category
-	category := models.Category{
-		CategoryName: req.CategoryName,
-		MainCategory: req.MainCategory,
-		Src:          "",
-	}
+	category.CategoryName = req.CategoryName
 
 	err := repository.Get().Category().Insert(&category)
 	if err != nil {
@@ -55,8 +55,8 @@ func Update(c echo.Context) error {
 	}
 
 	// exists category
-	category, err := repository.Get().Category().Exists(req.Id)
-	if err != nil {
+	category, err, rowCount := repository.Get().Category().Exists(req.Id)
+	if err != nil || rowCount == 0 {
 		return c.JSON(http.StatusBadRequest, helpers.Response(nil, "kategori bulunamadı."))
 	}
 
@@ -80,13 +80,41 @@ func Update(c echo.Context) error {
 	return c.JSON(http.StatusBadRequest, helpers.Response(nil, "kategori başarıyla güncellendi."))
 }
 
+// @Summary Main Categories
+// @Description root kategorileri getirir.
+// @Tags category
+// @Router /category/main [get]
 func MainCategory(c echo.Context) error {
-
 	categorys, err := repository.Get().Category().MainCategory()
 	if err != nil {
 		return c.JSON(http.StatusBadRequest, helpers.Response(nil, "Bir hata oldu"))
 	}
 
 	return c.JSON(http.StatusBadRequest, helpers.Response(categorys, "Başarılı"))
+}
 
+// @Summary Delete Category
+// @Description Var olan kategori bilgilerini siler.
+// @Tags category
+// @Param body body request.CategoryDelete false " "
+// @Router /category [Delete]
+func Delete(c echo.Context) error {
+	var req request.CategoryDelete
+	if helpers.Validator(&c, &req) != nil {
+		return nil
+	}
+
+	// category
+	category, err, rowCount := repository.Get().Category().Exists(req.Id)
+	if err != nil || rowCount == 0 {
+		fmt.Println(rowCount)
+		return c.JSON(http.StatusBadRequest, helpers.Response(nil, "kategori bulunamadı"))
+	}
+
+	err = repository.Get().Category().Delete(category)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, helpers.Response(nil, "kategori silinemedi"))
+	}
+
+	return c.JSON(http.StatusBadRequest, helpers.Response(nil, "kategori bulunamadı"))
 }
