# request/category.go
@@ -2,11 +2,15 @@ package request
 
 type CategoryInsert struct {
 	CategoryName string `json:"category_name" validate:"required"`
-	MainCategory uint   `json:"main_category_id"`
+	MainCategory uint   `json:"main_category_id" validate:"omitempty"`
 }
 
 type CategoryUpdate struct {
 	Id           uint   `json:"id" validate:"required"`
 	CategoryName string `json:"category_name" validate:"required"`
 	MainCategory uint   `json:"main_category_id" validate:"omitempty"`
+}
+
+type CategoryDelete struct {
+	Id uint `json:"id" validate:"required"`
 }
